Fix alignment of speakers in mobile view & over-layer width. (#53)
* Fix profile card

Fix over-layer width
Fix alignment of speakers in the mobile view.

* Crop over size profile image with CSS

--- a/css/custom.css
+++ b/css/custom.css
@@ -192,3 +192,16 @@
 #myBtn:hover {
     background-color: transparent;
 }
+/*Fix profile card overlayer width*/
+.speaker .hover-state{
+  width: 300px;
+}
+.speaker{
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.speaker .image-holder img{
+  height: 300px;
+  object-fit: cover;
+}
